# gameboy-emulator

./: .gitignore  .travis.yml  Cargo.toml  README.md  package-lock.json  save.save
.github/workflows/: ci.yml
core/: Cargo.toml
core/src/: debug_helper.rs  debugger.rs  emulator.rs  lib.rs
core/src/emulator/: audio.rs  cpu.rs  gpu.rs  interrupts.rs  joypad.rs  memory.rs  rom.rs  screen.rs  timer.rs
core/src/emulator/audio/: blip_buf.rs  noise_channel.rs  sample_buf.rs  square_channel.rs  volume_envelope.rs  wave_channel.rs
core/src/emulator/cpu/: cycle_timings.rs  registers.rs
core/src/emulator/gpu/: draw_helper.rs
core/src/emulator/rom/: rtc.rs
frontend_native/: Cargo.toml
frontend_native/src/: debugger.rs  main.rs  renderer.rs  sound.rs
frontend_web/: .gitignore  BUILD_AND_RUN.sh  Cargo.toml  package-lock.json
frontend_web/site/: index.html  index.js  layout.css  package-lock.json  package.json  rollup.config.js  webpack.config.js
frontend_web/site/public/: index.html  manifest.json
frontend_web/site/src/: App.svelte  DebugInfo.svelte  Header.svelte  Popup.svelte  Screen.svelte  audio.js  main.js  stores.js
frontend_web/site/src/controls/: ControlButton.svelte  ControlsAB.svelte  ControlsArrows.svelte  ControlsStartSelect.svelte  ControlsTop.svelte  controlStyles.js
frontend_web/src/: lib.rs
roms/turtle/: window_y_trigger.gb  window_y_trigger_wx_offscreen.gb
src/: debugger.rs  emulator.rs  main.rs  renderer.rs
src/emulator/: cpu.rs  devices.rs  gpu.rs  interrupt_helper.rs  interrupts.rs  memory.rs
src/emulator/cpu/: cycle_timings.rs  registers.rs  test.rs
src/emulator/devices/: timer.rs
src/emulator/memory/: rom.rs
