[package]
name = "emulator_core"
version = "0.1.0"
authors = ["wsandst <williamsandstrom99@hotmail.com>"]
edition = "2018"

[lib]
name = "emulator_core"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
text_io = "0.1.8"
modular-bitfield = "0.11.2"
serde = { version = "1.0.126", features = ["derive"] }
bincode = "1.3.3"
serde-big-array = { version = "0.3.2", features = ["const-generics"] }
flate2 = "1.0.20"
# Conditionally use BlipBuf, as it does not work in WASM due to C dependency
[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
blip_buf = "0.1.4"