[package]
name = "gb-emulator-native"
version = "0.1.0"
authors = ["wsandst <williamsandstrom99@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
emulator_core = { path = "../core" }
sdl2 = { version = "0.34.3", default-features = false, features = ["unsafe_textures"]}
text_io = "0.1.8"
